--- a/balatongyorok.css
+++ b/balatongyorok.css
@@ -22,7 +22,7 @@ header
 .fejlec2 {
 width: 1000px; 
 height: 200px;
-background-image: url(./img/cimer.jpg) ;   
+background-image: url(./img/cimer.png) ;   
  background-size: 15%;
  background-repeat: no-repeat;
  background-position: 750px 20px;
