--- a/03. Projekt/Snoezelen/projekt.css
+++ b/03. Projekt/Snoezelen/projekt.css
@@ -81,6 +81,7 @@ border-radius: 1px 20px;
     font-size: medium;
     background-color: azure; 
     padding: 2px;
+    margin-left: 2px;
 }
 
 .bkVIII {
