--- a/03. Projekt/Snoezelen/projekt.css
+++ b/03. Projekt/Snoezelen/projekt.css
@@ -1,8 +1,8 @@
 body {
     margin-top: 40px;
-    margin-left: 40px;
-    margin-bottom: 40px;
-    margin-right: 40px;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    margin-right: 10%;
     background-image: url(./Media/alap2.png) ;
     background-size: cover;
     background-attachment: fixed;
@@ -127,32 +127,26 @@ margin-left: 250px;
 .TB 
 {
     border: none;
-    border-collapse: separate;
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
-    border-spacing: 40px;
-    background-color: rgba(187, 255, 29, 0);
-    width: 900px;   
-    height: 60px;
+    background-color: rgba(248, 255, 232, 0);
+    width: 100%;
     text-shadow: -3px -3px 1px  rgba(229, 255, 0, 0.418);
     border-top-left-radius: 10px;
-   
+    
 }
 
-.TB td 
+.TB a 
 {
+    padding: 0.9%;
     border: 3px solid rgba(0, 0, 0, 0.548);
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
     background-image: linear-gradient(45deg, rgb(255, 255, 255)70%, rgba(217, 255, 0, 0.507));
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.808) ;
-    width: 900px;   
     height: 30px;    
-    text-shadow: -3px -3px 1px  rgba(0, 0, 0, 0.027);
+    text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
+
 }
 
 .TB2 
@@ -213,3 +207,67 @@ margin-left: 250px;
   .Rrrrr {
     font: italic 40px serif;
     fill: rgb(147, 255, 6);}
+
+    @media screen and (max-width:700px) { 
+
+    .TB a{
+    display: block;
+    width: 100%;
+    padding: 0%;
+    float: left;
+    }
+    .bk {
+        float: right;
+        display: inline-block ;
+        width: 100%;
+        margin-left: 5%;
+        margin-right: 1%;
+        padding: 10px;
+    }
+    .TB{
+        float: left;
+        width: 25%;
+        margin-top: 20%;
+    }
+    .list {
+        margin-left: -9%;
+        margin-right: 0%;
+        width: 100%;
+        float:left;   
+    }
+    .list li {
+        margin-left: 0%;
+        margin-right: 0%;
+        width: 100%;
+        float: left;
+    }
+    .listII {
+        margin-left: -9%;
+        margin-right: 0%;
+        width: 100%;
+        float: left;
+        }
+        .bkII {
+            float: left;
+        }      
+        .bkVI {
+            float: left;
+            width: 100%;
+        }  
+        .IB p {
+            margin-top: 10%;
+            display: inline-block ;
+            width: 55%;
+        }
+         hr{
+            display: none;
+         }
+         .BII a {
+            float: left;
+            height: 50px;
+            text-align: center;
+            margin-left: 3%;
+            margin-right: 1%;
+         }
+    }
+
