--- a/01. Órák/tranziciok.css
+++ b/01. Órák/tranziciok.css
@@ -29,6 +29,7 @@ h1 {
     text-align: center;
     transition: color 2s;
     text-shadow: 7px 7px 3px rgba(14, 14, 14, 0.39) ;
+    margin-left: -25%;
 }
 
     h1:hover    {color: rgb(145, 255, 0);}
@@ -37,16 +38,21 @@ h2 {
     background-color: rgba(255, 255, 255, 0);
     border-radius: 10px;
     width:180px;
-    transition: background-color 1s;
+    height: 38px;
+    transition: background-color 1s, width 3s, 
+    height 3s, transform 2s;
     box-shadow: 5px 5px 10px 2px rgba(200, 255, 0, 0.644) ;
-    
     font-size: xx-large;
     border: solid;
+
 }
         h2:hover {
-            background-color: rgb(179, 255, 0);
-            
-            
+            background-color: rgb(179, 255, 0);   
+            transition-timing-function: ease-out;
+            transition-delay: 1s;
+            width: 190px;
+            height: 40px;
+            transform: rotate(5deg);
         }
 
 h3 {
@@ -61,6 +67,14 @@ h3 {
         #eltol:hover {
         transform: translate(50px,0px);
         }
+        #p:hover {
+            background-color: rgb(179, 255, 0);   
+            transition-timing-function: ease-out;
+            transition-delay: 1s;
+            width: 190px;
+            height: 40px;
+            transform: rotate(5deg);
+        }
 
 #eltolII {
     transition: transform 1s;
@@ -68,9 +82,6 @@ h3 {
         #eltolII:hover {
         transform: translate(0px,50px);
         }
-
-
-
 
 #forgat img {
     transition: transform 2s;
@@ -166,9 +177,92 @@ h3 {
         #co p:hover {
             color: black;
         } 
- #style p{
-    transition: font-family 2s;
+ #style {
+    transition:  font-weight 3s;
     }
         #style p:hover {
-          font-family: 'Courier New', Courier, monospace;
+          font-weight: initial;
         }
+
+footer {
+    clear: left;
+}
+
+#svga {
+    transition: fill 2s;
+}
+    #svga:hover {
+      fill:  rgb(187, 255, 0);
+    }
+
+#svgb {
+    transition: fill 2s;
+}
+    #svgb:hover {
+        fill: rgba(0, 0, 0, 0.788);
+    }
+
+#svgc {
+    transition: fill 2s;
+}
+    #svgc:hover {
+        fill: rgba(0, 0, 0, 0.5);
+    }
+
+#svgd {
+    transition: fill 2s;
+}
+    #svgd:hover {
+        fill: rgba(255, 0, 0, 0);
+    }    
+
+.margin h2,svg {
+    
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
+}
+
+footer {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
+  
+    border-radius: 10px;
+    height: 60px;
+    width: 100%;
+    margin-bottom: 50px;
+}
+    footer:hover {
+            
+            color: white;
+            transition-timing-function: ease-out;
+            transition-delay: 1s;
+            
+    }
+
+    a {  float: left;
+        padding: 1%;
+        text-align: center;
+        transition: color 1s, transform 2s;
+        border: black 3px solid;
+        border-radius: 10px;
+        height: 20px;
+        width: 50%;
+        margin-bottom: 10px;
+        margin-left: 10%;
+        box-shadow: 5px 5px 10px 2px rgba(200, 255, 0, 0.644) ;
+    }
+
+    a:hover {
+            
+        color: rgb(0, 0, 0);
+        transition-timing-function: ease-out;
+        transition-delay: 1s;transform: rotate(1deg);
+      
+        
+}
+  a:visited {
+            color: #00FF00;
+  }
