--- a/01. Órák/tranziciok.css
+++ b/01. Órák/tranziciok.css
@@ -227,12 +227,10 @@ footer {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 50px;
-    
-  
     border-radius: 10px;
     height: 60px;
     width: 100%;
-    margin-bottom: 50px;
+    margin-left: 5%;
 }
     footer:hover {
             
