--- a/01. Órák/tranziciok.css
+++ b/01. Órák/tranziciok.css
@@ -3,11 +3,24 @@ body {
     background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 83%, rgba(211,255,0,1) 100%);
 }
 
-.keret {width:80%;
-margin-left: 15%;
-margin-right: 20%;
+header{
+    max-width: 100%;
+    margin-left: 5%;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
+.keret {
+    margin-right: 5%;
+    margin-left: 5%;    
+    
+}
+
+section {
+    padding: 5px;
+    margin-left:3%;
+    margin-right:3%;
+}
 
 .bal {float: left;}
 
@@ -178,10 +191,11 @@ h3 {
             color: black;
         } 
  #style {
-    transition:  font-weight 3s;
+    text-shadow: 7px 7px 3px rgba(14, 14, 14, 0);
+    transition: text-shadow 2s;
     }
         #style p:hover {
-          font-weight: initial;
+            text-shadow: 7px 7px 3px rgb(14, 14, 14);
         }
 
 footer {
@@ -229,8 +243,8 @@ footer {
     margin-bottom: 50px;
     border-radius: 10px;
     height: 60px;
-    width: 100%;
-    margin-left: 5%;
+    padding-left: 20%;
+    
 }
     footer:hover {
             
@@ -264,3 +278,71 @@ footer {
   a:visited {
             color: #00FF00;
   }
+
+
+
+
+  @media screen and (min-width:400px) and (max-width:1100px)
+  { 
+    .bal {
+        width: 20%;
+        
+    }
+
+   img{
+    width: 85%;
+    clear: left;}
+
+   h2{    
+    padding-top: 5%;
+    text-align: center;
+    font-size: small;
+    width:85%;
+    margin-right:1px ;
+    margin-left:1px ;
+    height: 30px;
+    clear: left;
+    }
+    p {
+        width: 85%;
+        font-size: xx-small;
+        height: 90px;
+        clear: left;
+        font-weight: initial;
+    }
+
+    h3 {
+        font-size: large;
+    }
+    .keret {
+        width: 85%;
+        margin-left: 10%;
+        margin-right: 10%;
+        clear: left;
+    }
+svg {
+    width: 110%;
+}
+
+#szoveg {
+    font-size: xx-small;
+    text-align: center;
+    height: 90%;
+    margin-right: 10px;
+    color: chartreuse;
+}
+h2:hover {
+    background-color: rgb(179, 255, 0);   
+    transition-timing-function: ease-out;
+    transition-delay: 1s;
+    width: 110%;
+    height: 0%;
+    transform: rotate(5deg);
+}
+
+a {
+    font-size: xx-small;
+}
+
+}
+
