--- a/03. Projekt/Snoezelen/projekt.css
+++ b/03. Projekt/Snoezelen/projekt.css
@@ -11,7 +11,7 @@ body {
 
 
 h2 {text-align: center;
-background-color:  rgba(180, 255, 5, 0.822);
+background-color:  rgba(255, 251, 0, 0.308);
 padding: 20px;
 box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
 font-size: xx-large;
@@ -23,6 +23,15 @@ border: 5px solid rgb(255, 255, 255);
 border-radius: 1px 20px;
 
 }
+
+li:hover {
+ transform: translate(-20px,0px);
+ -webkit-text-stroke: 1px rgba(0, 0, 0, 0.377);
+ box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
+ background-color: rgba(213, 228, 0, 0.205);
+
+}
+
 
 .bk {
     background-color: rgba(255, 255, 255, 0.959);
@@ -108,10 +117,12 @@ a:hover { /* Aktív formázás(rajta van az egér) */
 .list li { 
     list-style-image: url(./Media/pngegg.png) ;
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.678), rgba(255, 255, 255, 0.568) );
-box-shadow: 5px 5px 10px 2px rgba(179, 255, 0, 0.63) ;
+box-shadow: 5px 5px 10px 2px rgba(131, 122, 0, 0.63) ;
 text-align:center;
 margin-right: 250px;
 margin-left: 250px; 
+transition: transform 0.5s, backround 1s;
+padding: 1px;
 
 }
 
@@ -135,6 +146,21 @@ margin-left: 250px;
     
 }
 
+#img img {
+float: left;
+width:10%;
+margin-left: -12%;
+margin-top: -1%;
+transition: width 3s;
+
+
+}
+
+#img img:hover {
+    width: 12%;
+    
+}
+
 .TB a 
 {
     padding: 0.9%;
@@ -146,8 +172,17 @@ margin-left: 250px;
     box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.808) ;
     height: 30px;    
     text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
+    transition: background-color 1s, box-shadow 1s;
+}
+
+.TB a:hover {
+box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.808) ;
+background-color: rgb(0, 0, 0);
+transform: translate(50px,0px);
 
 }
+
+
 
 .TB2 
 {
@@ -228,9 +263,32 @@ margin-left: 250px;
         float: left;
         width: 25%;
         margin-top: 20%;
+        font-size: small;
     }
+
+    .TB a 
+{
+    padding: 0.9%;
+    padding-top: 10px;
+    border: 3px solid rgba(0, 0, 0, 0.548);
+    text-align: center;
+    background-image: linear-gradient(45deg, rgb(255, 255, 255)70%, rgba(217, 255, 0, 0.507));
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.808) ;
+    height: 20px;    
+    text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
+    transition: background-color 1s, box-shadow 1s, transform 0.5s;
+}
+
+.TB a:hover {
+box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.808) ;
+background-color: rgb(0, 0, 0);
+transform: translate(20px,0px);}
+
     .list {
-        margin-left: -9%;
+        
+        margin-left: -10%;
         margin-right: 0%;
         width: 100%;
         float:left;   
@@ -238,11 +296,11 @@ margin-left: 250px;
     .list li {
         margin-left: 0%;
         margin-right: 0%;
-        width: 100%;
+        width: 90%;
         float: left;
     }
     .listII {
-        margin-left: -9%;
+        margin-left: -15%;
         margin-right: 0%;
         width: 100%;
         float: left;
@@ -269,5 +327,12 @@ margin-left: 250px;
             margin-left: 3%;
             margin-right: 1%;
          }
+
+         img {
+            width: 15%;
+         }
+
+    
+         
     }
 
