--- a/03. Projekt/Snoezelen/projekt.css
+++ b/03. Projekt/Snoezelen/projekt.css
@@ -11,7 +11,7 @@ body {
 
 
 h2 {text-align: center;
-background-color:  rgba(255, 251, 0, 0.308);
+background-color:  rgba(179, 255, 0, 0.76);
 padding: 20px;
 box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
 font-size: xx-large;
@@ -24,27 +24,33 @@ border-radius: 1px 20px;
 
 }
 
-li:hover {
- transform: translate(-20px,0px);
- -webkit-text-stroke: 1px rgba(0, 0, 0, 0.377);
- box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
- background-color: rgba(213, 228, 0, 0.205);
-
-}
-
-
 .bk {
     background-color: rgba(255, 255, 255, 0.959);
     box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
     padding: 15px;
 }
 
-.bkII {
-    background-image: linear-gradient(45deg, rgba(221, 255, 28, 0.664)10%, rgba(255, 255, 255, 0.329) );
+.bkII img {
+    background-image: linear-gradient(45deg, rgba(212, 250, 0, 0.473)10%, rgba(255, 255, 255, 0.329) );
     box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
+    border-radius: 20px;
+    margin-left: 2%;
+    margin-right: 1%;
+    transition: transform 1s; 
 }
+
+        .bkII img:hover {transform: scale(1.2,1.2) rotate(5deg);}
+            #img img {
+                        float: left;
+                        width:10%;
+                        margin-left: 10%;
+                        margin-top: -1%;
+                        transition: width 3s;
+                    }
+
+            #img img:hover {width: 12%;}
 
 .bkIII {
     background-image: linear-gradient(45deg, rgb(187, 255, 28), rgba(255, 255, 255, 0.329) );
@@ -111,78 +117,85 @@ a:visited {
     color: rgb(72, 75, 67);
 }
 a:hover { /* Aktív formázás(rajta van az egér) */
-    color: rgb(255, 251, 0);
+    color: rgb(51, 50, 0);
 }
 
 .list li { 
-    list-style-image: url(./Media/pngegg.png) ;
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.678), rgba(255, 255, 255, 0.568) );
+list-style-image: url(./Media/pngegg.png) ;
+background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.678), rgba(255, 255, 255, 0.568) );
 box-shadow: 5px 5px 10px 2px rgba(131, 122, 0, 0.63) ;
 text-align:center;
-margin-right: 250px;
-margin-left: 250px; 
+margin-right: 50px;
+margin-left: px; 
 transition: transform 0.5s, backround 1s;
 padding: 1px;
-
+border-radius: 10px;
 }
+        li:hover {
+                transform: translate(-8px,0px); 
+                box-shadow: 5px 1px 10px 1px rgb(0, 0, 0) ;
+                background-color: rgba(213, 228, 0, 0.205);
+                padding: 1px;
+                }
 
-.listII {
+                .list p {    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.678), rgba(255, 255, 255, 0.568) );
+                            box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.63) ;
+                            text-align:center;
+                            width: 95%;
+                            height: 35px;
+                            font-size: large;
+                            font-weight: 700;
+                            transition: transform 0.5s, backround 1s;
+                            padding-top: 10px;
+                            border-radius: 10px;
+                        }
+
+.listII li {
 list-style-type: upper-roman;
 background-image: linear-gradient(45deg, rgba(187, 255, 28, 0.349), rgba(255, 255, 255, 0.329) );
 box-shadow: 5px 5px 10px 2px rgb(0, 0, 0) ;
 text-align:center;
-margin-right: 250px;
-margin-left: 250px; 
+margin-right: 50px;
+margin-left: 5px; 
+border-radius: 15px;
+transition: transform 1s,background-color 0.5s ;
+margin-bottom: 10px;
 }
+    .listII li:hover {transform: translate(15px,0px); padding: 0px; background-color: rgb(255, 255, 255); }
 
-.TB 
-{
+.TB {
     border: none;
     text-align: center;
     background-color: rgba(248, 255, 232, 0);
-    width: 100%;
+    width: 70%;
     text-shadow: -3px -3px 1px  rgba(229, 255, 0, 0.418);
     border-top-left-radius: 10px;
-    
+    float: left;
+    margin-left:20%;
+    margin-right: 20%;
+    position: sticky;
+        top: 0;
 }
 
-#img img {
-float: left;
-width:10%;
-margin-left: -12%;
-margin-top: -1%;
-transition: width 3s;
+        .TB a {
+                padding: 0.9%;
+                border: 3px solid rgba(0, 0, 0, 0.548);
+                text-align: center;
+                background-image: linear-gradient(45deg, rgb(255, 255, 255)70%, rgba(217, 255, 0, 0.753));
+                float: left;
+                border-top-right-radius: 10px;
+                border-bottom-left-radius: 10px;
+                box-shadow: 1px 2px 10px 3px rgba(0, 0, 0, 0.808) ;    
+                text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
+                transition: background-color 1s, box-shadow 1s, transform 0.5s;
+                margin-right: 2%;
+                }
 
-
-}
-
-#img img:hover {
-    width: 12%;
-    
-}
-
-.TB a 
-{
-    padding: 0.9%;
-    border: 3px solid rgba(0, 0, 0, 0.548);
-    text-align: center;
-    background-image: linear-gradient(45deg, rgb(255, 255, 255)70%, rgba(217, 255, 0, 0.507));
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.808) ;
-    height: 30px;    
-    text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
-    transition: background-color 1s, box-shadow 1s;
-}
-
-.TB a:hover {
-box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.808) ;
-background-color: rgb(0, 0, 0);
-transform: translate(50px,0px);
-
-}
-
-
+            .TB a:hover {box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.897) ;transform: rotate(2deg); background-color: rgb(0, 0, 0);}
+#Mmenu a{
+    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.377);
+    color: aliceblue; 
+            }
 
 .TB2 
 {
@@ -245,30 +258,36 @@ transform: translate(50px,0px);
 
     @media screen and (max-width:700px) { 
 
-    .TB a{
-    display: block;
-    width: 100%;
-    padding: 0%;
-    float: left;
-    }
+        .IB{min-width:392px;}
+
     .bk {
-        float: right;
-        display: inline-block ;
-        width: 100%;
-        margin-left: 5%;
-        margin-right: 1%;
-        padding: 10px;
+        
+    display: inline-block;
+        width: 60%;
+    float: left;
+        ;
+        margin-right: 0%;
+        
     }
     .TB{
         float: left;
         width: 25%;
         margin-top: 20%;
-        font-size: small;
-    }
+        font-size: smaller;
+        margin-right: -5%;
+        margin-left: 5%;
+        position: sticky;
+        right: 0;
+        }
 
     .TB a 
 {
+    margin-top: 15px;
+    width: 100%;
+    padding: 0%;
+    float: left;
     padding: 0.9%;
+    margin-left: -55%;
     padding-top: 10px;
     border: 3px solid rgba(0, 0, 0, 0.548);
     text-align: center;
@@ -277,7 +296,9 @@ transform: translate(50px,0px);
     border-bottom-left-radius: 10px;
     box-shadow: 1px 2px 2px 2px rgba(156, 253, 0, 0.808) ;
     height: 20px;    
+    font-size: smaller;
     text-shadow: -3px -3px 1px  rgba(255, 143, 143, 0.027);
+    position: sticky;
     transition: background-color 1s, box-shadow 1s, transform 0.5s;
 }
 
@@ -285,6 +306,10 @@ transform: translate(50px,0px);
 box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.808) ;
 background-color: rgb(0, 0, 0);
 transform: translate(20px,0px);}
+
+.list p {
+    font-size: small;
+}
 
     .list {
         
@@ -298,13 +323,17 @@ transform: translate(20px,0px);}
         margin-right: 0%;
         width: 90%;
         float: left;
+        margin-bottom: 10px;
     }
     .listII {
-        margin-left: -15%;
+        margin-left: -20%;
         margin-right: 0%;
-        width: 100%;
+        width: 120%;
         float: left;
+        font-size: smaller;
+
         }
+
         .bkII {
             float: left;
         }      
@@ -329,10 +358,25 @@ transform: translate(20px,0px);}
          }
 
          img {
-            width: 15%;
+            width: 17%;
          }
 
-    
-         
+        #rez p{
+            background-color: rgb(248, 248, 248);
+            
+            width: 88%;
+
+
+        }
+
+        h2 {
+            height: 25px;    
+            float: left;       
+            width: 90%; 
+        }
+
+        h2:hover {
+            
+        }
     }
 
