--- a/03. Projekt/project_flex.css
+++ b/03. Projekt/project_flex.css
@@ -175,6 +175,7 @@ background-color: rgba(0, 255, 255, 0);
     }
 
     .cont1 {
+        
         display:flex;
         flex-direction: row;    
         flex-wrap:wrap;     
@@ -183,10 +184,11 @@ background-color: rgba(0, 255, 255, 0);
         
         }
             .cont1 div{
+            
             background-color: blanchedalmond;
             margin: 0.5%;
             padding: 1%;   
-            width: 90%;
+            width: 94%;
 
             text-align: center;
             border-radius: 30px;
@@ -217,11 +219,13 @@ background-color: rgb(0, 155, 155);
         margin: 0.5%;
         padding: 1%;   
         text-align: center;
+        font-size: small;
             }
-            .insidecont1 div{        
+            .insidecont1 div{
+                font-size: small;        
                 background-color: rgb(255, 153, 0);
                 width:100%;
-                height: 80px;               
+                height: 40px;               
                 margin: 1%;
                 padding: 1%;   
                 text-align: center;
