--- a/zeta.css
+++ b/zeta.css
@@ -341,13 +341,23 @@ header {position: sticky;
         top: 0;
         grid-template-columns: repeat(1,100%);
         margin: 0% 0% 0% 0%;
-        grid-template-areas: "motto";
-        border-bottom: gold 1px solid;
-        box-shadow: black 1px 1px 5px 1px;                                }
+        grid-template-areas: "motto";               
+            -webkit-box-shadow:0px 1px 1px black;
+            -moz-box-shadow:0px 1px 1px black;
+            box-shadow:-10px 1px 9px black;    
+        border-bottom: 3px gold solid;                    }
         .motto {width: 100%; margin: 0% 0% 0% 0%;}
                 .elegant {font: italic 0px serif;fill: black; }
 
-nav {border: none; position: sticky; padding: 4%;border: none; box-shadow: none; background-color: white;}
+nav {display: flex;
+    height: 100%;
+    position: sticky;
+    border: none;
+    background-color: white;
+    -webkit-box-shadow:-9px 1px 9px black;
+    -moz-box-shadow:-9px 1px 9px black;
+    box-shadow: -9px 1px 9px black; 
+    border-bottom: 3px gold solid;}
     .mobilmenu {width: 100%; margin: 0% auto 0% 50%; position:sticky;}
     .mobilmenu .checkbox {grid-area: nav;
                         position: fixed;
@@ -358,7 +368,8 @@ nav {border: none; position: sticky; padding: 4%;border: none; box-shadow: none;
                         margin-right: auto;
                         margin-left: -51%;
                         margin-top:4%;
-                        background-color: white;}
+                        background-color: white;
+                        }
     .hamburger{
         background-image: url(./media/Hamburger_icon.svg);
         background-repeat: no-repeat;
@@ -368,7 +379,7 @@ nav {border: none; position: sticky; padding: 4%;border: none; box-shadow: none;
         padding: 30%;
         width: 30%;
         margin: 20% 0% 0% -60%;
-        border-bottom: solid 1px gold;
+       
         border-top-right-radius: 50%;
         border-bottom-left-radius: 50%;}
         .mobildropdown{margin-left: -100%;}
@@ -415,7 +426,8 @@ nav {border: none; position: sticky; padding: 4%;border: none; box-shadow: none;
 section {margin: 5% 0% 0% 0%; display: flex; flex-direction: column;}
     section p{ margin: 1%;}
     .szakaszI, .szakaszII {width: 90%;}
-    .cimke, .cimke2{font-size: smaller;width: 60%;}
+    .cimke, .cimke2{font-size: medium;width: 60%;background-color: orange;}
+    #c2, #c3 { color: white;}
 
 footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%;}
     footer p {display: none;}
