--- a/zeta.css
+++ b/zeta.css
@@ -346,8 +346,10 @@ header {position: sticky;
             -moz-box-shadow:0px 1px 1px black;
             box-shadow:-10px 1px 9px black;    
         border-bottom: 3px gold solid;                    }
-        .motto {width: 100%; margin: 0% 0% 0% 0%;}
-                .elegant {font: italic 0px serif;fill: black; }
+        .motto {margin: 3% 0% 0% 16%;}
+        .heavy1 {font: bold 12px Montserrat Subrayada ;fill: rgb(252, 227, 0);}/* font-family: 'Montserrat Subrayada', sans-serif; */
+        .heavy {font: bold 11.1px Montserrat Subrayada;fill: rgb(0, 0, 0);}
+        .elegant {font: italic 0px serif;fill: black; }
 
 nav {display: flex;
     height: 100%;
@@ -359,15 +361,13 @@ nav {display: flex;
     box-shadow: -9px 1px 9px black; 
     border-bottom: 3px gold solid;}
     .mobilmenu {width: 100%; margin: 0% auto 0% 50%; position:sticky;}
-    .mobilmenu .checkbox {grid-area: nav;
-                        position: fixed;
-                        display: flex;                
+    .mobilmenu .checkbox {position: fixed;
+                        display: inline;
                         opacity: 0;
                         cursor: pointer;
-                        width: 100%;
-                        margin-right: auto;
-                        margin-left: -51%;
-                        margin-top:4%;
+                        width: 10%;
+                        height: 5%;
+                        margin: 3% 0% 0% -13%;
                         background-color: white;
                         }
     .hamburger{
@@ -379,30 +379,41 @@ nav {display: flex;
         padding: 30%;
         width: 30%;
         margin: 20% 0% 0% -60%;
-       
         border-top-right-radius: 50%;
         border-bottom-left-radius: 50%;}
         .mobildropdown{margin-left: -100%;}
-             .mobildropdown-content  {
+             
+        .mobildropdown-content  {
                 box-shadow:gold 1px 1px 5px 1px; 
                 display:flex; flex-direction: column;
                 position: fixed;
-                margin: 0% 0% 0% -1%;  
-                background-image: linear-gradient(90deg,white 70%, rgba(255, 255, 255, 0.575));     
+                width: 100%;
+                margin-top:3.4%; 
+                background-image: linear-gradient(90deg,white 70%, rgba(255, 251, 0, 0.575));     
                 animation-name: start;
-                animation-duration: 0.7s;  
-                opacity: 0;
-                animation-fill-mode: forwards;} 
+                animation-duration: 1s;  
+                animation-fill-mode: forwards;
+                } 
                     @keyframes start {
-                        0%   {opacity: 0;}
-                        100%   {opacity: 1;}}       
-
+                        0%   {transform: translatex(-500px);}
+                        100%   {transform:translatex(0px);}}       
+                        .current {
+                            color: rgba(0, 0, 0, 0);
+                            animation-name: currentnav;
+                            animation-duration: 3.8s;  
+                            text-shadow: rgb(255, 238, 0) 0px 0px 12px;
+                            animation-fill-mode: forwards;} 
+                          
+                                @keyframes currentnav {
+                                    0%   {background-color: gold;color: rgba(0, 0, 0, 0); }
+                                    100%   {linear-gradient:(90deg,white 70%, rgba(255, 251, 0, 0.575)); color: black;}}
+                    
             .dropdown, nav a{
                 font-size: small;
                  padding: 4%;
                   width: 100%;
                    border-radius: 0px;
-                    text-align: left;}
+                    text-align: center;}
             .dropdown{transition: padding 1s;}
             .dropdown:hover  {padding: 0%;}
             .dropdown-content {
@@ -422,11 +433,12 @@ nav {display: flex;
                     .dropdown-content #c1 {color: white;} 
 
     .mobilmenu input[type="checkbox"]:not(:checked) ~ .mobildropdown  {display: none;}       
-    
-section {margin: 5% 0% 0% 0%; display: flex; flex-direction: column;}
+    .mobilmenu input[type="checkbox"]:checked ~ .mobildropdown  {height: 50%;}
+
+section {margin: 5% 0.5% 3% 0.5%; display: flex; flex-direction: column;}
     section p{ margin: 1%;}
     .szakaszI, .szakaszII {width: 90%;}
-    .cimke, .cimke2{font-size: medium;width: 60%;background-color: orange;}
+    .cimke, .cimke2{font-size: medium;width: 68%;background-color: gold; border-color: black;}
     #c2, #c3 { color: white;}
 
 footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%;}
