--- a/zeta.css
+++ b/zeta.css
@@ -176,7 +176,6 @@ section { display: flex;
         border-top-right-radius: 15px;
         grid-area: content;
         padding: 1%;}
-
 .szakaszI { width: 49%; 
             padding: 0% 3%;
             margin:-1% 1% 0% 0%;
@@ -221,6 +220,107 @@ section { display: flex;
             /* box-shadow: gold 2px 2px 3px 1px ; */}
             #c3 {color: orange;}
 
+/* KAPCSOLAT */
+
+.kapcsolat { 
+    grid-area: content;
+    width: 90%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;}
+        
+    .kapcsolat_forms{width: 100%;
+                    display:flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    margin: auto;
+                    justify-content: space-around;
+                    align-items: start;}
+
+        .intro{ text-align: right;
+                width: 100%;
+                padding: 0.5%;
+                background-image: linear-gradient(360deg,white 85%, rgba(255, 255, 255, 0));} 
+
+        .kapcs1{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: start;
+            justify-content: start;
+                width: 100%;
+                margin: 0% 0% 0% 0%;
+                padding: 1%;
+                background-image: linear-gradient(360deg,white 85%, rgba(255, 255, 255, 0));}
+            #adatok, #adatok2 {display: grid; grid-template-columns:repeat(2,50%); margin-bottom: 0%;}
+                .kapcs1 label {display:flex;
+                    padding: 0.5%;
+                               justify-content: right;
+                                margin-left: -6%;
+                                width: 200px;}
+                .kapcs1 input { height:20px;
+                                width: 200px;
+                                flex-direction: row;
+                                border:1px solid gold;
+                                border-radius: 0px;
+                                box-shadow: inset black 0px 0.5px 2px 1px;   }
+               
+                #adatok2 label{height: 25px;width: 200px;}
+                #adatok2 {padding: 3% 0%;
+                        border-top: gold 1px solid;
+                        border-top-right-radius: 40px;
+                        border-bottom: gold 1px solid;
+                        border-bottom-left-radius: 40px;
+                        font-style: italic;
+                        font-size: small;}
+                #adatok2 input {
+                margin-top: -1%;
+                height: 20px;
+                width: 130px;
+                accent-color: black;
+                margin-left: 0%;
+                box-shadow: none;}
+                .gombok {display: flex;width: 50px;margin-top: 1%;}
+                    .gombok input{font-family:Montserrat Subrayada;
+                        align-self:safe;
+                        width: fit-content; 
+                        height: 30px;
+                        border-radius: 1px;border: gold 2px solid;
+                        background-color: white;
+                        margin: 0% 60%;
+                        box-shadow: none;}
+        .kapcs2{display: flex;
+                flex-direction: column;
+                justify-content: right;
+                justify-items: right;
+                align-items: center;
+                width: 100%;
+                padding: 2%;
+                margin: 1%;
+                background-image: linear-gradient(360deg,rgba(255, 255, 255, 0) 15%, rgb(255, 255, 255));}
+            textarea{margin: 2% 0%;
+                    border: gold 2px solid;
+                    box-shadow: inset -1px 1px 5px 0.1px;}
+            .kapcs2 input {font-family:Montserrat Subrayada;
+                    width: fit-content; 
+                    height: 30px;
+                    border-radius: 1px;border: gold 2px solid;
+                    background-color: white;
+                    margin: 1% 0%;}
+                .kapcs2 #mail2 {width: 300px; height: 20px;}
+    
+    #confirm {font-family:Montserrat Subrayada;
+        font-size: small;
+        margin: 4% 0% 0% -70%;
+        display:flex ;
+        flex-direction: c;
+        border-bottom: gold 2px solid;
+        border-bottom-left-radius: 40px;}  
+        #confirm input{margin-top: 0.3%; 
+                    margin-left:0%;
+                    accent-color: black;}
+
 /* LÁBLÉC */
     
 footer {grid-area: footer;
@@ -258,7 +358,8 @@ header {margin-top: 3%;}
 .szakaszI{margin-top: -4%;}                
 
 footer {border-top: solid orange 2px; font-size: small; width: 99%;}
-   
+    /* kapcsolat */
+    #confirm {margin-left: -70%;}     
 }
 
 @media screen and (min-width:685px) and (max-width:900px){
@@ -291,7 +392,11 @@ footer {border-top: solid orange 2px; font-size: small; width: 99%;}
             footer img {display: none;}
 }
 
-@media screen and (min-width:605px) and (max-width:685px){
+/* kapcsolat */
+#confirm {margin-left: 0%;}  
+    
+
+@media screen and (min-width:501px) and (max-width:685px){
 
 header {grid-template-columns: repeat(2,50%);
         grid-template-areas: "motto sup"; margin-top: 7%;}
@@ -328,7 +433,7 @@ header {grid-template-columns: repeat(2,50%);
                 #mail {display: block; width:7.5%;height: 60%;}
 }
 
-@media screen and (min-width:300px) and (max-width:605px){
+@media screen and (min-width:300px) and (max-width:500px){
     
 body {margin: 0%;
     grid-template-columns: repeat(4,25%);
@@ -368,8 +473,7 @@ nav {display: flex;
                         width: 10%;
                         height: 5%;
                         margin: 3% 0% 0% -13%;
-                        background-color: white;
-                        }
+                        background-color: white;}
     .hamburger{
         background-image: url(./media/Hamburger_icon.svg);
         background-repeat: no-repeat;
@@ -430,7 +534,7 @@ nav {display: flex;
     .mobilmenu input[type="checkbox"]:not(:checked) ~ .mobildropdown  {display: none;}       
     .mobilmenu input[type="checkbox"]:checked ~ .mobildropdown  {height: 50%;}
 
-section {margin: 5% 0.5% 3% 0.5%; display: flex; flex-direction: column;}
+section {margin: 5% 0.5% 3% 0.5%; display: flex; flex-direction: column;border: none;}
     section p{ margin: 1%;}
     .szakaszI, .szakaszII {width: 90%;}
     .cimke, .cimke2{font-size: medium;width: 68%;background-color: gold; border-color: black;}
@@ -442,4 +546,27 @@ footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%
     #face {width: 7%; height:60%; padding:0.3%;box-shadow:inset black -1px -1px 3px 1px; }
     #tel {width: 7%; padding: 0.6%;box-shadow:inset black 1px 1px 3px 1px;}
     #mail {display: block; width:7.5%;height: 60%;}
+
+    /* kapcsolat */    
+.kapcsolat { margin: 4%;}
+    .kapcs1 input { height:40px;width: 140px;flex-direction: column;}
+        #adatok, #adatok2 {display: grid; grid-template-columns:repeat(1,100%); margin-bottom: 0%;}
+                .kapcs1 input { height:20px;
+                                width: 200px;
+                                flex-direction: row;}
+                textarea {width: 290px;}
+                #adatok2 label{height: 25px;width: 200px;}
+                #adatok2 {padding: 3% 3%;}
+                #adatok2 input {
+                margin-top: -15%;
+                height: 20px;
+                width: 130px;
+                accent-color: black;
+                margin-left: 0%;
+                box-shadow: none;}  
+    .gombok {display: flex;width: 50px;margin-top: 1%;}
+    .gombok input{height: 20px;margin: 0% 0% 0% -5%;}
+    .kapcs2{width:250px;padding: 0%;margin: 3% 10% 0% 4%;}
+#confirm {font-size: x-small;margin: 4% 0% 0% -10%; border:none;} 
+
 }
