--- a/zeta.css
+++ b/zeta.css
@@ -597,22 +597,22 @@ footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%
             textarea{display: block; width:280px;
                  margin: 0% 0% 0% 0%;}
             .kapcs2 label {display:block;margin: auto;}
-            .kapcs2 input {display: flex; margin: 5% 10% 0% 10%; padding: 0%;} 
+            .kapcs2 input {display: flex; margin: 5% 10% 0% 10%; padding: 0%;
+            width: 212px;} 
                 .kapcs2 #mail2 {display: inline;width: 200px; height: 20px;}
     
     #confirm{
-        display:none;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        flex-wrap: wrap;
-        width:250px;
+        display:flex;
+        text-align: center;
+        align-items:end;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        width:200px;
         font-family:Montserrat Subrayada;
         font-size: x-small;
-        margin:0% 0% 0% 7%;
-        padding: 0%;
+        margin: 0% 10%;
+        padding: 5%;
         border:none}  
-        #confirm input{  margin-top: 0%; 
-                    margin-left:0%;
+        #confirm input{  margin-top: -10%; 
                     accent-color: black;}
 }
